Mostrar Alumnos en Home

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,10 +11,11 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+    <h1> Lista de Alumnos </h1>
     <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/Escuela/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/Escuela/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+        {%for alumno in alumnos %}
+            <li> {{alumno.Nombre}} {{alumno.Apellido}}
+        {% endfor %}
+    
 </div>
 {% endblock %}
